# mango

./: .gitignore  .travis.yml  Anchor.toml  README.md  env.devnet
cli/: Cargo.toml  README.md  deploy.sh  devnet.env  devnet_deploy.sh  mainnet.env  new_group.md
cli/src/: main.rs
client-ts/: devnet.env  package.json  queue_crank.sh  tsconfig.json
client-ts/src/: client.ts  ids.json  index.ts  layout.ts  layouts.js  market.ts  utils.ts
common/: Cargo.toml  ids.json
common/src/: lib.rs  utils.rs
liquidator/: .eslintrc.json  README.md  crank.sh  package.json  tsconfig.json
liquidator/src/: index.ts  liquidate.ts  test.ts  utils.ts
program/: Cargo.toml
program/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs  utils.rs
program/tests/: test_borrow.rs  test_deposit.rs  test_init.rs  test_settle_borrow.rs  test_srm.rs
program/tests/fixtures/: README.md
program/tests/helpers/: mod.rs
web/: Dockerfile  README.md  package.json
web/public/: index.html
web/src/: App.css  App.js  ids.json  layouts.js
web/src/components/: AmountInput.jsx
