[package]
name = "cli"
version = "2.0.0"
authors = ["blockworks"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "cli"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.36"
clap = "3.0.0-beta.2"
solana-client = "^1.6.4"
solana-cli = "^1.6.4"
solana-sdk = "^1.6.4"
mango = { version = "*", path = "../program", features=["no-entrypoint"] }
spl-token = { version = "^3.1.0", features=["no-entrypoint"] }
serde_json = "1.0.60"
chrono = "*"
common = { version = "*", path = "../common" }
serum_dex = { version = "^0.2", git = "https://github.com/blockworks-foundation/serum-dex.git", features=["no-entrypoint", "program"] }

flux-aggregator = { version = "^0.1", git = "https://github.com/blockworks-foundation/solana-flux-aggregator.git", features=["program", "no-entrypoint"] }
arrayref = "^0.3.6"

fixed = { version = "^1.7.0" }
