[package]
name = "cli"
version = "2.0.0"
authors = ["blockworks"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "cli"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.36"
clap = "3.0.0-beta.2"
solana-client = "^1.6.4"
solana-cli = "^1.6.4"
solana-sdk = "^1.6.4"
serde_json = "1.0.60"
chrono = "*"
arrayref = "^0.3.6"
fixed = { version = "^1.7.0" }

common = { version = "*", path = "../common" }
mango = { version = "*", path = "../program", features=["no-entrypoint"] }

spl-token = { version = "^3.0.0", features=["no-entrypoint"] }
serum_dex = { version = "0.4.0", rev="3104f424ee38a415418a1cdef67970771f832857", git = "https://github.com/blockworks-foundation/serum-dex.git", default-features=false, features = ["no-entrypoint", "program"] }
flux-aggregator = { version = "^0.1", rev="ca6706d05218acc84d164ed5149fac7612d3aa2b", git = "https://github.com/blockworks-foundation/solana-flux-aggregator.git", features=["program", "no-entrypoint"] }
pyth-client = {version = ">=0.5.0", features = ["no-entrypoint"]}
