[package]
name = "common"
version = "2.0.0"
authors = ["blockworks"]
edition = "2018"


[dependencies]
solana-sdk = "^1.7.10"
spl-token = { version = "^3.2.0", features=["no-entrypoint"] }
anyhow = "^1.0.43"
solana-client = "^1.7.10"
rand = "0.8.4"
serde_json = "^1.0.66"
bs58 = "0.4.0"
bincode = "^1.3.1"
bytemuck = "^1.7.2"
tiny-bip39 = "0.8.0"
tiny-hderive = "0.3.0"
ed25519-dalek = "1.0.0-pre.4"
