[package]
name = "mango"
version = "0.1.0"
authors = ["blockworks"]
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
solana-program = "1.4.14"
spl-token = { version = "3.0.0", features=["no-entrypoint"] }
byteorder = "1.3.4"
arrayref = "0.3.6"
num_enum = "0.5.1"
bytemuck = "1.4.1"
safe-transmute = "0.11.0"
enumflags2 = "=0.6.4"
static_assertions = "1.1.0"
thiserror = "1.0.22"
serde = "1.0.118"
bincode = "1.3.1"
serum_dex = { version = "*", git = "https://github.com/project-serum/serum-dex.git", features=["no-entrypoint", "program"] }

fixed = "=0.5.7"

# add at the end
#[profile.release]
#lto = true

[lib]
name = "mango"
crate-type = ["cdylib", "lib"]
