[package]
name = "mango"
version = "2.1.2"
authors = ["blockworks"]
edition = "2018"

[features]
no-entrypoint = []
devnet = []
test-bpf = []

[dependencies]
solana-program = "^1.6.4"
spl-token = { version = "^3.0.0", features=["no-entrypoint"] }
byteorder = "^1.3.4"
arrayref = "^0.3.6"
num_enum = "^0.5.1"
bytemuck = "^1.4.1"
safe-transmute = "^0.11.0"
enumflags2 = "^0.6.4"
static_assertions = "^1.1.0"
thiserror = "^1.0.24"
serde = "^1.0.118"
bincode = "^1.3.1"
serum_dex = { version = "0.4.0", git = "https://github.com/blockworks-foundation/serum-dex.git", default-features=false, features = ["no-entrypoint", "program"] }

num-derive = "^0.3.3"
flux-aggregator = { version = "^0.1", git = "https://github.com/blockworks-foundation/solana-flux-aggregator.git", features=["program", "no-entrypoint"] }
fixed = { version = "^1.7.0", features=["serde"] }
fixed-macro = "^1.1.1"

[dev-dependencies]
solana-sdk = "^1.6.4"
solana-program-test = "^1.6.4"

[profile.release]
lto = true

[lib]
name = "mango"
crate-type = ["cdylib", "lib"]
